--- a/themes/up-business-theme/layouts/partials/head/head.html
+++ b/themes/up-business-theme/layouts/partials/head/head.html
@@ -7,6 +7,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{end}}" />
 
+  <!-- Floating WhatsApp button -->
+  <script>
+    // var url = 'https://wati-integration-prod-service.clare.ai/v2/watiWidget.js?41577';
+    var url = '/scripts/whatsappButton.js';
+    var s = document.createElement('script');
+    s.type = 'text/javascript';
+    s.async = true;
+    s.src = url;
+    var options = {
+    "enabled":true,
+    "chatButtonSetting":{
+        "backgroundColor":"#00e785",
+        "ctaText":"Chat with us",
+        "borderRadius":"25",
+        "marginLeft": "0",
+        "marginRight": "20",
+        "marginBottom": "20",
+        "ctaIconWATI":false,
+        "position":"right"
+    },
+    "brandSetting":{
+        "brandName":"CollegesKart",
+        "brandSubTitle":"undefined",
+        "brandImg":"https://www.wati.io/wp-content/uploads/2023/04/Wati-logo.svg",
+        "welcomeText":"Hi there!\nHow can I help you?",
+        "messageText":"",
+        "backgroundColor":"#00e785",
+        "ctaText":"Chat with us",
+        "borderRadius":"25",
+        "autoShow":false,
+        "phoneNumber":"918076849550"
+    }
+    };
+    s.onload = function() {
+        CreateWhatsappChatWidget(options);
+    };
+    var x = document.getElementsByTagName('script')[0];
+    x.parentNode.insertBefore(s, x);
+  </script>
+
   <!-- Favicons and Manifest -->
   {{ partial "head/_favicons.html" . }}
 
