--- a/themes/up-business-theme/layouts/partials/utilities/image-fluid.html
+++ b/themes/up-business-theme/layouts/partials/utilities/image-fluid.html
@@ -1,3 +1,3 @@
 {{ with resources.Get . }}
-  <img class="img-fluid" src="{{ .Permalink }}" alt="{{ .Title }}" width="{{ .Width }}" height="{{ .Height }}">
+  <img class="img-fluid d-block mx-auto" src="{{ .Permalink }}" alt="{{ .Title }}" width="{{ .Width }}" height="{{ .Height }}">
 {{ end }}
