--- a/themes/up-business-theme/layouts/partials/shared/footer.html
+++ b/themes/up-business-theme/layouts/partials/shared/footer.html
@@ -6,10 +6,12 @@
         <p class="small text-black-61">{{ .Site.Params.description }}</p>
         {{ with .Site.Params.social }}
         <ul class="d-flex justify-content-center justify-content-xl-start list-unstyled">
-          {{ with .dribbble }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/dribbble.html" }}</a></li>{{ end }}
-          {{ with .instagram }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/instagram.html" }}</a></li>{{ end }}
-          {{ with .facebook }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/facebook.html" }}</a></li>{{ end }}
-          {{ with .twitter }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/twitter.html" }}</a></li>{{ end }}
+          {{ with .linkedin }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a target="_blank" class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/linkedin.html" }}</a></li>{{ end }}
+          {{ with .instagram }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a target="_blank" class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/instagram.html" }}</a></li>{{ end }}
+          {{ with .facebook }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a target="_blank" class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/facebook.html" }}</a></li>{{ end }}
+          {{ with .twitter }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a target="_blank" class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/twitter.html" }}</a></li>{{ end }}
+          {{ with .youtube }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a target="_blank" class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/youtube.html" }}</a></li>{{ end }}
+          {{ with .koo }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a target="_blank" class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/koo.html" }}</a></li>{{ end }}
         </ul>
         {{ end }}
       </div>
