--- a/themes/up-business-theme/assets/scss/shared/_bootstrap.scss
+++ b/themes/up-business-theme/assets/scss/shared/_bootstrap.scss
@@ -7,9 +7,9 @@
 
 $font-family-base: "Inter", sans-serif;
 
-$primary: #7C76BB;
-$secondary: #27A3FF29;
-$danger: #FF87B0;
+$primary: #ffab00;
+$secondary: #27A3FF29; 
+$danger: #000000;
 $light: #FFFFFF;
 
 // scss-docs-start import-stack
