--- a/themes/up-business-theme/layouts/partials/sections/testimonials.html
+++ b/themes/up-business-theme/layouts/partials/sections/testimonials.html
@@ -20,8 +20,9 @@
       <div class="col-12 col-xl-7 d-flex flex-column justify-content-center">
         <div class="pb-4">{{ partial "utilities/image-third.html" "images/testimonials-left-quote.png" }}</div>
         <div class="card d-flex flex-row align-items-start border-0 shadow p-5">
-          <div class="bg-green rounded-circle size-64 me-4"></div>
-          <p class="card-text text-black-61">"{{ .text }}" <span class="fw-bold text-primary text-nowrap">- {{ .client }}</span></p>
+          <!-- <div class="bg-green rounded-circle size-64 me-4"></div> -->
+          <div class="rounded-circle size-90 mb-4">{{ partial "icons/star.html" }}</div>
+          <p class="ms-4 card-text text-black-61">"{{ .text }}" <span class="fw-bold text-primary text-nowrap">- {{ .client }}</span></p>
         </div>
         <div class="pt-4 text-end">{{ partial "utilities/image-third.html" "images/testimonials-right-quote.png" }}</div>
       </div>
@@ -38,8 +39,9 @@
               </div>
             {{ else }}
               <div class="card-body">
-                {{ $colors := (slice "bg-green" "bg-yellow" "bg-red" "bg-purple") }}
-                <div class="{{ index $colors (mod $i 4) }} rounded-circle size-90 mb-4"></div>
+                <!-- {{ $colors := (slice "bg-green" "bg-yellow" "bg-red" "bg-purple") }} -->
+                <div class="rounded-circle size-90 mb-4">{{ partial "icons/star.html" }}</div>
+                <!-- <div class="{{ index $colors (mod $i 4) }} rounded-circle size-90 mb-4"></div> -->
                 <p class="card-text text-black-61">"{{ $e.text }}" <span class="fw-bold text-primary text-nowrap">- {{ $e.client }}</span></p>
               </div>
             {{ end }}
