--- a/themes/up-business-theme/layouts/partials/shared/header.html
+++ b/themes/up-business-theme/layouts/partials/shared/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-xl navbar-light bg-light py-4">
+<nav class="navbar navbar-expand-xl navbar-light bg-light py-4 bg-black">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="{{ .Site.BaseURL }}">
       <!-- {{ partial "utilities/image.html" "/images/collegesKartLogo.png" }} -->
