--- a/themes/up-business-theme/layouts/partials/shared/header.html
+++ b/themes/up-business-theme/layouts/partials/shared/header.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-xl navbar-light bg-light py-4 bg-black">
+<nav class="navbar navbar-expand-xl navbar-dark bg-black py-4">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="{{ .Site.BaseURL }}">
       <!-- {{ partial "utilities/image.html" "/images/collegesKartLogo.png" }} -->
       <span class="mx-2 fs-3 fw-semibold text-capitalize text-primary">{{ .Site.Title }}</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon" ></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav ms-auto mb-2 mb-xl-0">
