--- a/themes/up-business-theme/layouts/partials/sections/testimonials.html
+++ b/themes/up-business-theme/layouts/partials/sections/testimonials.html
@@ -1,16 +1,23 @@
 <section class="section testimonials py-5">
   <div class="container">
     <div class="row justify-content-center pb-5">
-      <div class="col-12 col-xl-6">
-        {{ with .content.title }}
-          <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
-        {{ end }}
-        {{ with .content.text }}
-          <p class="text-black-61 text-center pb-3">{{ . }}</p>
-        {{ end }}
+      {{ with .content.title }}
+        <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
+      {{ end }}
+      <div class="row">
+        <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
+          {{ with .content.text }}
+            <p class="text-black-61 text-center pb-3">{{ . }}</p>
+          {{ end }}
+        </div>
+        <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
+          {{ with .content.image }}
+            {{ partial "utilities/image-fluid.html" . }}
+          {{ end }}
+        </div>
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
       {{ with .content.featured }}
       <div class="col-12 col-xl-5 d-flex flex-column justify-content-center">
         {{ with .image }}
@@ -20,17 +27,17 @@
       <div class="col-12 col-xl-7 d-flex flex-column justify-content-center">
         <div class="pb-4">{{ partial "utilities/image-third.html" "images/testimonials-left-quote.png" }}</div>
         <div class="card d-flex flex-row align-items-start border-0 shadow p-5">
-          <!-- <div class="bg-green rounded-circle size-64 me-4"></div> -->
+          <div class="bg-green rounded-circle size-64 me-4"></div>
           <div class="rounded-circle size-90 mb-4">{{ partial "icons/star.html" }}</div>
           <p class="ms-4 card-text text-black-61">"{{ .text }}" <span class="fw-bold text-primary text-nowrap">- {{ .client }}</span></p>
         </div>
         <div class="pt-4 text-end">{{ partial "utilities/image-third.html" "images/testimonials-right-quote.png" }}</div>
       </div>
       {{ end }}
-    </div>
+    </div> -->
     <div class="row">
       {{ range $i, $e := .content.list }}
-        <div class="col-12 col-xl-6">
+        <div class="col-12 col-xl-4">
           <div class="card border-0 border-radius-34 p-4">
             {{ with $e.image }}
               {{ partial "utilities/image-fluid.html" $e.image }}
