--- a/themes/up-business-theme/layouts/partials/shared/footer.html
+++ b/themes/up-business-theme/layouts/partials/shared/footer.html
@@ -16,7 +16,7 @@
         {{ end }}
       </div>
       <div class="col-12 col-xl-2 text-center text-xl-start pb-4">
-        <h5 class="fs-6 fw-semibold text-primary">About us</h5>
+        <h5 class="fs-6 fw-semibold text-primary">Sitemap</h5>
         <ul class="list-unstyled">
           {{ range .Site.Menus.footer }}
             <li class="">
