--- a/themes/up-business-theme/layouts/partials/shared/footer.html
+++ b/themes/up-business-theme/layouts/partials/shared/footer.html
@@ -43,9 +43,9 @@
         {{ end }}
       </div>
       <div class="col-12 col-xl-3 text-center text-xl-start pb-4">
-        <h5 class="fs-6 fw-semibold text-primary">Referrals and partnerships</h5>
+        <h5 class="fs-6 fw-semibold text-primary">Referrals and Partnerships</h5>
         <ul class="list-unstyled">
-          <li> <a target="_blank" style="text-decoration: none;" href="https://forms.gle/zJzE5WMbxcJBDSr19"> Student referrals </a> </li>
+          <li> <a target="_blank" style="text-decoration: none;" href="https://forms.gle/zJzE5WMbxcJBDSr19"> Student Referrals </a> </li>
           <li> <a target="_blank" style="text-decoration: none;" href="https://forms.gle/q9opfAsNbrUemCQm6"> Partnerships </a> </li>
         </ul>
       </div>
