fix company name capitalization

--- a/themes/up-business-theme/layouts/partials/head/head.html
+++ b/themes/up-business-theme/layouts/partials/head/head.html
@@ -28,7 +28,7 @@
         "position":"right"
     },
     "brandSetting":{
-        "brandName":"CollegesKart",
+        "brandName":"collegeskart",
         "brandSubTitle":"undefined",
         "brandImg":"https://www.wati.io/wp-content/uploads/2023/04/Wati-logo.svg",
         "welcomeText":"Hi there!\nHow can I help you?",
