--- a/themes/up-business-theme/layouts/partials/shared/header.html
+++ b/themes/up-business-theme/layouts/partials/shared/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="{{ .Site.BaseURL }}">
       <!-- {{ partial "utilities/image.html" "/images/collegesKartLogo.png" }} -->
-      <span class="mx-2 fs-3 fw-semibold text-capitalize text-primary">{{ .Site.Title }}</span>
+      <span class="mx-2 fs-3 fw-semibold text-primary">{{ .Site.Title }}</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon" ></span>
