--- a/themes/up-business-theme/layouts/partials/sections/hero.html
+++ b/themes/up-business-theme/layouts/partials/sections/hero.html
@@ -16,7 +16,7 @@
             <a class="btn btn-primary text-light px-4 my-1" href="{{ .url }}">{{ .label }}</a>
           {{ end }} -->
           {{ with .content.buttonSecondary }}
-            <a class="btn btn-outline-primary px-4 my-1" href="{{ .url }}">{{ .label }}<span class="ms-2">{{ partial "icons/arrow-right.html" }}</span></a>
+            <a class="btn btn-outline-primary px-4 my-1" href="tel:+919757255815">{{ .label }}<span class="ms-2">{{ partial "icons/arrow-right.html" }}</span></a>
           {{ end }}
         </div>
       </div>
