add logo and restyle company name title

--- a/themes/up-business-theme/layouts/partials/shared/header.html
+++ b/themes/up-business-theme/layouts/partials/shared/header.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-xl navbar-dark bg-black py-4">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="{{ .Site.BaseURL }}">
-      <!-- {{ partial "utilities/image.html" "/images/collegesKartLogo.png" }} -->
-      <span class="mx-2 fs-3 fw-semibold text-primary">{{ .Site.Title }}</span>
+      {{ partial "utilities/image.html" "/images/logo.png" }}
+      <p class="mx-2 mb-1 fs-3 logo-color text-primary">{{ .Site.Title }}</p>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon" ></span>
