add profiling CTA in hero section

--- a/themes/up-business-theme/layouts/partials/shared/header.html
+++ b/themes/up-business-theme/layouts/partials/shared/header.html
@@ -18,7 +18,7 @@
       <ul class="navbar-nav ms-xl-3 mb-2 mb-xl-0">
         {{ range .Site.Menus.buttons }}
           <li class="nav-item">
-            <a class="nav-link btn btn-primary text-light px-4" href="{{ .URL }}">{{ .Name }}</a>
+            <a target="_blank" class="nav-link btn btn-primary text-light px-4" href="{{ .URL }}">{{ .Name }}</a>
           </li>
         {{ end }}
       </ul>
