add enquiry form iframe on landing page

--- a/themes/up-business-theme/layouts/partials/sections/cta.html
+++ b/themes/up-business-theme/layouts/partials/sections/cta.html
@@ -19,7 +19,7 @@
         {{ end }}
       </div>
     </div> -->
-    <form name="enquiries" netlify>
+    <!-- <form name="enquiries" netlify>
       <div class="mb-3">
         <label for="name" class="form-label">Name:</label>
         <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
@@ -41,6 +41,10 @@
       </div>
     
       <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    </form> -->
+    <div class="embed-responsive w-100">
+      <iframe class="embed-responsive" width="100%" height="500px" src="https://docs.google.com/forms/d/e/1FAIpQLScs74-xYP32scboy6EAnFlcvQ79cJStb471hu9fv5KrnUg8VQ/viewform?embedded=true" frameborder="0">Loading…</iframe>
+      <!-- <iframe class="embed-responsive-item" src="https://www.example.com"></iframe> -->
+    </div>
   </div>
 </section>
