--- a/themes/up-business-theme/layouts/index.html
+++ b/themes/up-business-theme/layouts/index.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
   {{ with .Site.Data.home.hero }}{{ partial "sections/hero.html" . }}{{ end }}
+  {{ with .Site.Data.home.featuredGrid }}{{ partial "sections/featuredGrid.html" . }}{{ end }}
   {{ with .Site.Data.home.testimonials }}{{ partial "sections/testimonials.html" . }}{{ end }}
   <!-- {{ with .Site.Data.home.brands }}{{ partial "sections/brands.html" . }}{{ end }} -->
   {{ with .Site.Data.home.cta }}{{ partial "sections/cta.html" . }}{{ end }}
